--- a/bundles/uikit/ThemeProvider.mod.css
+++ b/bundles/uikit/ThemeProvider.mod.css
@@ -1,15 +1,15 @@
 .themeMap {
   /* "brand" isn't really accurate here, but for now it's a placeholder to mean "not gray" */
-  --brand-primary: #5e0324;
+  --brand-primary: #4721A5;
   --background-primary: #fff;
-  --background-secondary: #efe5e9;
-  --background-tertiary: #f9f6f7;
+  --background-secondary: #DDD9E9;
+  --background-tertiary: #F4F3F8;
   --border-primary: 1px solid var(--brand-primary);
   --border-secondary: 1px solid var(--background-secondary);
   --header-normal: var(--brand-primary);
-  --header-muted: #a26179;
+  --header-muted: #7456BF;
   --text-normal: var(--brand-primary);
-  --text-muted: #a26179;
+  --text-muted: var(--header-muted);
   --text-link: #0076a3;
   --text-inverted: #fff;
   --font-primary: museo-sans, 'Museo Sans', 'Museo Sans 500 Regular', 'Helvetica Neue', Helvetica, Arial, sans-serif;
